# fortran-workout-log

./: CMakeLists.txt  README.org  exercise.json  exercise_set.json  main.F90  workout.F90  workout_history.json  workout_types.F90
tests/: parse_exercise.F90  parse_set.F90  parse_workout.F90  parse_workout_history.F90  workout.json
